added tool controller

--- a/app/views/tool/index.html.erb
+++ b/app/views/tool/index.html.erb
@@ -1,6 +1,5 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
-
+<h1>Tool#index</h1>
+<p>Find me in app/views/tool/index.html.erb</p>
 
 <p>
   <strong>Name:</strong>
